# QuadTreeDevice

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  main
config/: device.json  test.json
data/: test_data.json
include/: data.hpp  device.hpp  helpers.hpp  logger.hpp  quadTree.hpp  requests.hpp  structs.hpp  zone.hpp
src/: data.cpp  device.cpp  helpers.cpp  logger.cpp  main.cpp  quadTree.cpp  requests.cpp
